syntax = "proto3";

package dest;

service Query {
  rpc PostQuery (EventRequest) returns (ResultResponse) {}
}

// Type

enum TypeEnum {
  DEFAULT_TYPE = 0;
  SQLITE = 2049;
  MARIADB = 3306;
  MYSQL8 = 3307;
}

message TypeRequest {
  TypeEnum type = 1;
}

// Name

message NameRequest {
  TypeEnum type = 1;
  string name = 2;
}

// Event

enum ActionEnum {
  DEFAULT_ACTION = 0;
  SAVE = 1;
  REMOVE = 2;
  READ = 3;
  WRITE = 4;
  ROOT = 5;
  INTROSPECT = 6;
}

message EventItem {
  ActionEnum action = 1;
  string target = 2;
  repeated string values = 3;
  repeated string tables = 4;
}

message EventRequest {
  TypeEnum type = 1;
  string name = 2;
  EventItem event = 3;
}

// Success

message SuccessResponse {
  bool success = 1;
}

// Result

message ResultItem {
  uint32 time = 1;
  string error = 2;
  repeated string rows = 3;
}

message ResultResponse {
  bool success = 1;
  ResultItem result = 2;
}
